<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book Reading Stats</string>
    <string name="addBook">Add Book</string>
    <string name="title_activity_book_list">Book List</string>
    <string name="title_activity_book">Book</string>
    <string name="addSession">Add Session</string>
    <string name="bookName">Book Name</string>
    <string name="totalPages">Total Pages:</string>
    <string name="pagesRed">Pages Read:</string>
    <string name="percentageRed">Percentage Read:</string>
    <string name="elapsedTime">Time Elapsed: </string>
    <string name="estimated">Estimated Read Time: </string>
    <string name="estimatedLeft">Estimated Time Left: </string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="hhmm">hh:mm</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="zero">00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="page">What page did you stop at?</string>
    <string name="hour">Hours</string>
    <string name="minute">Minutes</string>
    <string name="percent">%</string>
    <string name="alert">Alert!</string>
    <string name="close">Close</string>
    <string name="books">Total Books:</string>
    <string name="read">Books Read:</string>
    <string name="reading">Books Reading:</string>
    <string name="totalTimeElapsed">Time Elapsed:</string>
    <string name="zeroInt">0</string>
    <string name="back">Back</string>
    <string name="doneReading">Done Reading</string>
    <string name="pagesLeft">Pages left:</string>
    <string name="started">Started:</string>
    <string name="ended">Ended:</string>
    <string name="sessions">Sessions</string>
    <string name="delete_book">Delete book</string>
    <string name="avgMinPage">Avg. min/page</string>
    <string name="avgPageMin">Avg. pages/min</string>
    <string name="ses">Sessions:</string>
    <string name="chart">Chart</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pie_chart">Time Spent Chart</string>
    <string name="pie">Pie Chart</string>
    <string name="noSes">No sessions yet</string>
    <string name="noBooks">No books on list yet</string>
    <string name="export">Export DB</string>
    <string name="success">Success</string>
    <string name="myimport">Import DB</string>
    <string name="nodata">No Data</string>
    <string name="title_activity_import">Import DB</string>
    <string name="handle">Drawer Handle</string>
    <string name="startedon">Started on:</string>
    <string name="endedon">Ended on:</string>
    <string name="lines">--</string>
    <string name="search">Search Book</string>
    <string name="clear">Clear</string>
    <string name="totals">Totals</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_totals">Totals</string>
    <string name="partial">Partial Estimate</string>
    <string name="partial_c">Partial Estimate:</string>
    <string name="pages">Pages</string>
    <string name="calc">Calc</string>
    <string name="change_pages_read">Change Pages Read</string>
    <string name="delete_session">Delete Session</string>
    

</resources>