<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_book"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/addBook"/>
    <item
        android:id="@+id/totals"
        android:icon="@drawable/ic_totals"
        android:orderInCategory="101"
        android:showAsAction="always|withText"
        android:title="@string/totals"/>
    <item
        android:id="@+id/export"
        android:icon="@drawable/ic_export"
        android:orderInCategory="102"
        android:showAsAction="ifRoom|withText"
        android:title="@string/export"/>
    <item
        android:id="@+id/myimport"
        android:icon="@drawable/ic_import"
        android:orderInCategory="103"
        android:showAsAction="ifRoom|withText"
        android:title="@string/myimport">
    </item>
    <item
        android:id="@+id/close"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="104"
        android:showAsAction="always|withText"
        android:title="@string/close"/>

</menu>