<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1,2"
    tools:context=".SessionsActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/zero"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonStart"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/start" />

        <Button
            android:id="@+id/buttonStop"
            style="?android:attr/buttonStyleSmall"
            android:enabled="false"
            android:text="@string/stop" />

        <Button
            android:id="@+id/buttonReset"
            style="?android:attr/buttonStyleSmall"
            android:enabled="false"
            android:text="@string/reset" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonStyleSmall"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/buttonDone"
            style="?android:attr/buttonStyleSmall"
            android:layout_span="2"
            android:enabled="false"
            android:text="@string/done" />

    </TableRow>

</TableLayout>