<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/sessions"
        android:icon="@drawable/ic_sessions"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/sessions"/>
    <item
        android:id="@+id/partial"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/partial"/>
    <item
        android:id="@+id/done"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="102"
        android:showAsAction="always|withText"
        android:title="@string/done"/> 
    <item
        android:id="@+id/cancel"
        android:icon="@drawable/ic_back"
        android:orderInCategory="103"
        android:showAsAction="always|withText"
        android:title="@android:string/cancel"/>
    

</menu>